@@ -1,6 +1,11 @@
 Changes since 2.0.0 release:
 
-	By default mark variables and functions as "static" since some
+	Renamed environment variable `CSMITH_PATH' to be `CSMITH_HOME'.
+	`HOME' is the common naming convention for variables that identify
+	a single directory; `PATH' is the convention for lists of
+	directories.
+	
+	By default, mark variables and functions as "static" since some
 	compilers can exploit this to optimize more aggressively.
 
 	Loop code generation is significantly generalized [Xuejun: please
